--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-hot-loader": "^3.1.3",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^3.1.0"
+    "webpack-dev-server": "^3.1.0",
+    "worker-loader": "^1.1.1"
   },
   "dependencies": {
     "babel-preset-env": "^1.6.1",
